--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,19 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        dummy {
+            storeFile file("dummy-certificate.jks")
+            storePassword "snakeoil"
+            keyAlias "key0"
+            keyPassword "snakeoil"
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.dummy
         }
     }
 }
