--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:launchMode="singleInstance"
             android:theme="@style/AppTheme.NoActionBar">
 
             <intent-filter>
@@ -27,6 +28,7 @@
         <activity
             android:name=".StorageActivity"
             android:label="StorageActivity"
+            android:launchMode="singleInstance"
             android:theme="@style/AppTheme.NoActionBar">
 
             <intent-filter>
