--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 'android-R'
     defaultConfig {
         applicationId "com.example.swamp"
         minSdkVersion 26
-        targetSdkVersion 28
+        targetSdkVersion 'R'
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
